# the-living-constitution

./: .dockerignore  .env.example  .gitignore  .gitmodules  .markdownlintignore  AGENTS.md  CLAUDE.md  CRSP-001-AC-003.json  CRSP-001-AC-003.md  CRSP-001.json  CRSP-001.md  ChatGPT-AI Governance Frameworks.md  Dockerfile  HANDOFF.md  LICENSE  MASTER_PROJECT_INVENTORY.json  MASTER_PROJECT_INVENTORY.md  MODULE_STATUS.md  PROGRAM_ARCHITECTURE.md  README.md  SOCIOTECHNICAL_CONSTITUTION.md  STATUS.json  STATUS.md  TESTING123.md  THE_LIVING_CONSTITUTION.md  TLC_BRANCH_STATE_2026-04-23.md  constitutional_evaluator.py  delegated-whistling-cherny.md  docker-compose.yml  experiment.py  openmemory.md  package.json  production.env.example  requirements-dev.txt  requirements-verify.txt
projects/evaluation/: BUILD_CONTRACT.md  README.md  crsp_EVAL-001_contract.md  evidence_summary.md  pattern_analysis.md  pyproject.toml
projects/evaluation/datasets/: failure_cases.json
projects/evaluation/docs_json/: manifest.json  system.json
projects/evaluation/docs_json/sources/: BUILD_CONTRACT.json  README.json  crsp_EVAL-001_contract.json  evidence_summary.json
projects/evaluation/eval_specs/: invariant_suite.yaml
projects/evaluation/scripts/: json_docs.py
projects/evaluation/tlc_evals/: __init__.py
projects/evaluation/tlc_evals/core/: judge.py
projects/evaluation/tlc_evals/datasets/: loader.py
projects/evaluation/tlc_evals/evals/: __init__.py  f2_phantom_completion.py  f3_persistence_under_correction.py  f4_harm_risk_coupling.py  f5_cross_episode_recurrence.py  suite.py
projects/evaluation/tlc_evals/graders/: calibration_grader.py  constitutional_ai_grader.py
projects/evaluation/tlc_evals/invariants/: __init__.py  checker.py  i1_evidence_first.py  i5_safety_over_fluency.py
projects/evaluation/tlc_evals/reporters/: console_reporter.py  json_reporter.py  vt_reporter.py
projects/evaluation/verification/: checkpoint_phase1_20260413_034805.json  checkpoint_phase2_20260413_034805.json  checkpoint_phase3_20260413_034805.json  checkpoint_phase5_20260413_034805.json  ci_signal_20260413_034805.json  crsp_EVAL-001_log.json  eval_results_20260413_034805.json  recurrence_analysis_20260413_034805.json  suite_config_20260413_034805.json  topology_validation_20260413_034805.json
projects/proactive/: .ai-catalog-mapping.json  .gitignore  .gitlab-ci.yml  BUILD_CONTRACT.md  CLAUDE.md  NARRATIVE.md  PROACTIVE_CODE_REVIEW.md  README.md  proactive-agent-prompts.md  proactive-architecture-summary.md  proactive-demo-script.md  proactive-gap-analysis.md  proactive-release-checklist.md  proactive-status-vt.md  proactive-zero-shot-build-contract.md  pyproject.toml
projects/proactive/agents/: proactive-agent.yml
projects/proactive/docs/: FINAL_VIDEO_SCRIPT.md  JUDGE_VIEWING_GUIDE.md  VIDEO_EDIT_PLAN.md  agent-usage.md  demo-runbook-final.md  fact-check-boundaries.md  flow-triage.md  hackathon-submission-checklist.md  judge-test-guide-final.md  proactive-ai-constitution-for-claude-code.md  research-methodology.md  semantic-drift.md  submission-final.md  video-script-final.md  vt-generator.md
projects/proactive/evidence/: kiro_admits_lying.md  kiro_deception.md
projects/proactive/proactive/: cli.py  col.py  constitution.json  contract_window.py  drift_detector.py  gitlab_client.py  label_assigner.py  llm_client.py  mr_analyzer.py  report_formatter.py  semantic_drift_detector.py  severity_scorer.py  validator.py  vt_generator.py  web_ui.py
projects/proactive/proactive/prompts/: assess_drift.txt  (+3 more)
projects/proactive/research/: __init__.py  ablation_config.py  ablation_evaluator.py  ablation_report.py  ablation_runner.py  run_ablation.py  test_data.py
projects/proactive/tests/: test_ablation_suite.py  test_agent_integration.py  test_agent_tools.py  test_col.py  test_contract_window.py  test_drift_detector.py  test_label_assigner.py  test_mr_analyzer.py  test_report_formatter.py  test_semantic_drift_detector.py  test_severity_scorer.py  test_triage_flow.py  test_validator.py  test_vt_generator.py  test_web_ui.py
(+662 files in other folders)
