[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proactive"
version = "4.0.0"
description = "PROACTIVE: Constitutional AI safety agent for code review"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Corey Alejandro", email = "corey@example.com"}
]
keywords = ["ai", "safety", "code-review", "constitutional-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# RUNTIME DEPENDENCIES (needed by proactive.cli)
dependencies = [
    "anthropic>=0.7.0",           # LLM client for Claude API
    "python-gitlab>=3.0.0",       # GitLab API client
    "click>=8.0",                 # CLI framework
    "requests>=2.28.0",           # HTTP client
    "pydantic>=2.0.0",            # Data validation
]

[project.optional-dependencies]
# DEV-ONLY DEPENDENCIES (not needed by proactive.cli)
dev = [
    "pytest>=7.0",                # Testing framework
    "pytest-cov>=4.0",            # Coverage reporting
    "black>=22.0",                # Code formatter
    "isort>=5.0",                 # Import sorter
    "mypy>=0.900",                # Type checker
    "ruff>=0.1.0",                # Linter
    "pre-commit>=3.0",            # Git hooks
]

[project.urls]
Homepage = "https://gitlab.com/gitlab-ai-hackathon/participants/28441830"
Repository = "https://gitlab.com/gitlab-ai-hackathon/participants/28441830.git"
Issues = "https://gitlab.com/gitlab-ai-hackathon/participants/28441830/-/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["proactive*", "research*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=proactive --cov-report=term-missing"
